--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "install": "^0.13.0",
+    "node-fetch": "^2.6.0",
     "npm": "^6.11.2"
   }
 }
